# tantheta

./: LICENSE  README.md  checking_chemistry.py  checking_maths.py  checking_physics.py  examples.py  linalg_check.py  pyproject.toml  setup.py  stats_check.py  testing.py
tantheta/: __init__.py  algebra.py  calculus.py  chemistry.py  geometry.py  linear_algebra.py  maths.py  physics.py  plot.py  probability.py  stats.py  trigonometry.py
