[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tantheta"
version = "1.0.0"
description = "A lightweight math library for symbolic calculus, algebra, trigonometry, and statistics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

authors = [
    {name = "Ayush Parwal", email = "ayushparwal777@gmail.com"},
]

maintainers = [
    {name = "Ayush Parwal", email = "ayushparwal777@gmail.com"},
]

keywords = ["math", "symbolic", "sympy", "calculus", "algebra", "trigonometry", "statistics"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "sympy>=1.12"
]

[project.urls]
Homepage = "https://github.com/Ayushparwal/tantheta"
Repository = "https://github.com/Ayushparwal/tantheta"
Documentation = "https://github.com/Ayushparwal/tantheta#readme"

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]
