[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tantheta"
version = "1.0.0"
description = "AI-powered development assistant for code generation, refactoring, and project management"
readme = "README.md"
authors = [{ name = "Tantheta Team", email = "ayushparwal777@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["sympy>=1.12"]
